<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorNavigation">

        <include
            android:id="@+id/include_header"
            layout="@layout/header" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_header">

            <Button
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_action_home"
                android:drawableStart="@drawable/ic_action_home"
                android:text="@string/home"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_action_user"
                android:drawableStart="@drawable/ic_action_user"
                android:text="@string/my_profile"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home" />

            <Button
                android:id="@+id/event"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_event_available"
                android:drawableStart="@drawable/ic_event_available"
                android:text="@string/events"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <Button
                android:id="@+id/fav"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_favorite"
                android:drawableStart="@drawable/ic_favorite"
                android:text="@string/favorite"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event" />

            <Button
                android:id="@+id/inbox"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mail_outline"
                android:drawableStart="@drawable/ic_mail_outline"
                android:text="@string/inbox"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fav" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <Button
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_message"
                android:drawableStart="@drawable/ic_message"
                android:text="@string/contact"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/feed"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_feedback"
                android:drawableStart="@drawable/ic_feedback"
                android:text="@string/feed_back"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

            <Button
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_settings"
                android:drawableStart="@drawable/ic_settings"
                android:text="@string/setting"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feed" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageButton
                android:id="@+id/my_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_image_button"
                android:layout_marginStart="@dimen/margin_image_button"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/add_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@id/my_school"
                app:layout_constraintLeft_toRightOf="@id/my_school"
                app:layout_constraintTop_toTopOf="@id/my_school" />

            <ImageButton
                android:id="@+id/about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@id/add_school"
                app:layout_constraintLeft_toRightOf="@id/add_school"
                app:layout_constraintTop_toTopOf="@id/add_school" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout2" />

        <ImageButton
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorNavigation"
            android:src="@drawable/ic_action_import"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout3" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>